# cookiecutter-rt-django

./: .git-blame-ignore-revs  .gitignore  CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json  features.md  noxfile.py  pyproject.toml
{{cookiecutter.repostory_name}}/: .dockerignore  .env-dev.template  .env-prod.template  .env.template  .envrc.template  .gitignore  .shellcheckrc  README.md  README_AWS.md  README_vultr.md  SECURITY.md  dc-prod.yml  dc-virtualenv.yml  deploy-to-aws.sh  deploy.sh  docker-compose-dev.yml  docker-compose-prod.yml  letsencrypt_renew.sh  letsencrypt_setup.sh  letsencrypt_setup_crontab.sh  noxfile.py  pyproject.toml  setup-dev.sh  setup-docker-prod.sh  setup-prod.sh  setup-virtualenv.sh  {% if cookiecutter.deployment_type == 'aws' %}README_AWS.md{% endif %}  {% if cookiecutter.deployment_type in ['direct', 'vultr'] %}deploy.sh{% endif %}
{{cookiecutter.repostory_name}}/.github/: dependabot.yml
{{cookiecutter.repostory_name}}/.github/actions/setup-uv-nox/: action.yml
{{cookiecutter.repostory_name}}/.github/workflows/: cd.yml  ci.yml  cruft-updates.yml
{{cookiecutter.repostory_name}}/alloy/: config.alloy
{{cookiecutter.repostory_name}}/app/: Dockerfile
{{cookiecutter.repostory_name}}/app/envs/dev/: Dockerfile
{{cookiecutter.repostory_name}}/app/envs/prod/: Dockerfile  celery-entrypoint.sh  entrypoint.sh  gunicorn.conf.py  prometheus-cleanup.sh  {% if cookiecutter.monitoring %}prometheus-cleanup.sh{% endif %}  {% if cookiecutter.monitoring == "y" %}prometheus-cleanup.sh{% endif %}  {% if cookiecutter.use_celery %}celery-entrypoint.sh{% endif %}  {% if cookiecutter.use_celery == 'y' %}celery-entrypoint.sh{% endif %}
{{cookiecutter.repostory_name}}/app/src/: entrypoint.sh  healthcheck.py  manage.py  mypy.ini  notify.py  pytest.ini  requirements.txt  requirements_freeze.py
{{cookiecutter.repostory_name}}/app/src/{{cookiecutter.django_project_name}}/: asgi.py  celery.py  settings.py  urls.py  wsgi.py  {% if cookiecutter.observability %}otel.py{% endif %}  {% if cookiecutter.use_celery %}celery.py{% endif %}  {% if cookiecutter.use_celery == 'y' %}celery.py{% endif %}
{{cookiecutter.repostory_name}}/app/src/{{cookiecutter.django_project_name}}/api/: routers.py  serializers.py  views.py  {% if cookiecutter.use_rest_framework %}pagination.py{% endif %}  {% if cookiecutter.use_rest_framework %}routers.py{% endif %}  {% if cookiecutter.use_rest_framework %}views.py{% endif %}  {% if cookiecutter.use_rest_framework == "y" %}serializers.py{% endif %}
{{cookiecutter.repostory_name}}/app/src/{{cookiecutter.django_project_name}}/{{cookiecutter.django_default_app_name}}/: __init__.py  admin.py  apps.py  business_metrics.py  constance_prometheus.py  consumers.py  email.py  healthcheck.py  metrics.py  models.py  schemas.py  tasks.py  {% if cookiecutter.monitoring %}metrics.py{% endif %}  {% if cookiecutter.monitoring == "y" %}business_metrics.py{% endif %}  {% if cookiecutter.monitoring == "y" %}metrics.py{% endif %}  {% if cookiecutter.use_allauth %}adapters.py{% endif %}  {% if cookiecutter.use_celery %}tasks.py{% endif %}  {% if cookiecutter.use_channels %}consumers.py{% endif %}  {% if cookiecutter.use_channels %}schemas.py{% endif %}
{{cookiecutter.repostory_name}}/app/src/{{cookiecutter.django_project_name}}/{{cookiecutter.django_default_app_name}}/tests/: __init__.py  conftest.py  settings.py  test.py  test_database.py  test_example.py  test_hello_world.py  test_postgresql.py  test_settings.py  test_setup.py  test_websocket.py  {% if cookiecutter.use_channels == "y" %}test_websocket.py{% endif %}
{{cookiecutter.repostory_name}}/backups/: Dockerfile  backup.cron  docker-entrypoint.sh  supervisord.conf
{{cookiecutter.repostory_name}}/backups/cron.d/: backup
{{cookiecutter.repostory_name}}/devops/packer/: build.sh  docker-optimized.pkr.hcl
{{cookiecutter.repostory_name}}/devops/scripts/: build-backend.sh  deploy-backend.sh  vars.sh
{{cookiecutter.repostory_name}}/devops/tf/core/: backend.tf  main.tf  terraform.tfvars  vars.tf
{{cookiecutter.repostory_name}}/devops/tf/main/envs/common/: main.tf  vars.tf  versions.tf
{{cookiecutter.repostory_name}}/devops/tf/main/envs/prod/: backend.tf  main.tf  parameters.env.tf  terraform.tfvars  vars.tf
{{cookiecutter.repostory_name}}/devops/tf/main/envs/staging/: backend.tf  parameters.env.tf  terraform.tfvars  vars.tf  versions.tf
{{cookiecutter.repostory_name}}/devops/tf/main/files/: authorized_keys  cloud-init.yml  docker-compose.yml  env  envrc
{{cookiecutter.repostory_name}}/devops/tf/main/files/alloy/: {% if cookiecutter.observability %}config.alloy{% endif %}
{{cookiecutter.repostory_name}}/devops/tf/main/modules/admin/: alb.tf  domain.tf  ec2-autoscale.tf  ec2-keys.tf  ec2-profile.tf  parameters.certs.tf  parameters.docker-compose.tf  parameters.nginx.tf  parameters.ssh-keys.tf  vars.tf
{{cookiecutter.repostory_name}}/devops/tf/main/modules/backend/: alb.tf  cloudwatch.tf  domain.tf  ec2-autoscale.tf  ec2-keys.tf  ec2-profile.tf  parameters.docker-compose.tf  parameters.env.tf  parameters.nginx.tf  parameters.ssh-keys.tf  security.tf  vars.tf
{{cookiecutter.repostory_name}}/devops/vultr_scripts/: vultr-deploy.py  vultr-get-instances.py  vultr-update-cloudinit.py
{{cookiecutter.repostory_name}}/devops/vultr_tf/core/: backend.tf  main.tf  vars.tf  vars_cloud_init.tf  vultr-cloud-init.tftpl
{{cookiecutter.repostory_name}}/envs/dev/: .env.template  docker-compose.yml
{{cookiecutter.repostory_name}}/envs/prod/: .env.template  .vuln.env.template  docker-compose.yml
{{cookiecutter.repostory_name}}/nginx/conf/: default.template
{{cookiecutter.repostory_name}}/nginx/config_helpers/: brotli.conf  ignore_bad_host.conf  ignore_bad_host_allow_ip.conf
{{cookiecutter.repostory_name}}/nginx/monitoring_certs/: README  README.md
{{cookiecutter.repostory_name}}/nginx/templates/: default.conf.template
{{cookiecutter.repostory_name}}/promtail/: config.yml
{{cookiecutter.repostory_name}}/tools/backup-b2/: Dockerfile  list_backups.sh  retrieve_backup.sh  send_backup.sh
(+31 files in other folders)
