[project]
name = "cookiecutter-rt-django"
description = "RT Django project template - don't install try to install this as package, use it as cruft template"
version = "0"
license = {file = "LICENSE"}
requires-python = ">=3.9"

dependencies = [
    "cruft",
    "nox",
]

[project.optional-dependencies]
format = ["ruff"]
lint = ["ruff"]

[tool.ruff]
# TODO add D
select = ["E", "F", "I", "UP"]
# TODO: remove E501 once docstrings are formatted
ignore = [
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102","D103", "D104", # TODO remove once we have docstring for all public methods
    "E501", # TODO: remove E501 once docstrings are formatted
]
line-length = 100
exclude = [
    "\\{\\{cookiecutter.repostory_name\\}\\}",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"test/**" = ["D", "F403", "F405"]
