[project]
name = "cookiecutter-rt-django"
description = "RT Django project template - don't install try to install this as package, use it as cruft template"
version = "0"
license = {file = "LICENSE"}
requires-python = ">=3.11"

dependencies = [
    "cruft",
    "nox",
]

[project.urls]
homepage = "https://github.com/reef-technologies/cookiecutter-rt-django"
changelog = "https://github.com/reef-technologies/cookiecutter-rt-django/{{cookiecutter.repostory_name}}/docs/3rd_party/cookiecutter-rt-django/CHANGELOG.md"

[tool.setuptools]
packages = []

[project.optional-dependencies]
format = ["ruff"]
lint = ["ruff", "codespell[toml]"]

[tool.ruff]
line-length = 120
exclude = [
    "\\{\\{cookiecutter.repostory_name\\}\\}",
]

[tool.ruff.lint]
# TODO add D
select = [
    "E", "F", "I", "UP", "S",
    "TC005",
]
# TODO: remove E501 once docstrings are formatted
ignore = [
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102","D103", "D104", # TODO remove once we have docstring for all public methods
    "E501", # TODO: remove E501 once docstrings are formatted
    "S101", "S108", "S603", "S607",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/test*/**.py" = ["D", "F403", "F405", "S106", "S311"]

[tool.codespell]
skip = '*.min.js,*.lock'
ignore-words-list = 'datas'
