[project]
name = "{{cookiecutter.repostory_name}}"
requires-python = "==3.11.*"
version = "0"
dependencies = [
    "Django~=4.2.4",
    {% if cookiecutter.csp_enabled == "y" -%}
    "django-csp==3.7",
    {% endif -%}
    "django-constance[database]==3.1.0",
    "django-cors-headers~=4.2.0",
    "django-environ~=0.11.2",
    "django-extensions==3.2.3",
    "django-probes==1.7.0",
    "django-debug-toolbar==4.1.0",
    {% if cookiecutter.use_celery == "y" -%}
    "celery~=5.3.1",
    {% if cookiecutter.use_flower == 'y' -%}
    "flower~=2.0.0",
    {% endif -%}
    {% endif -%}
    "gunicorn==20.1.0",
    "psycopg2-binary~=2.9.7",
    "redis~=4.6.0",
    "sentry-sdk==1.3.0",
    "ipython~=8.14.0",
    "nox==2023.4.22",
    {% if cookiecutter.monitoring == "y" -%}
    "prometheus-client~=0.17.0",
    "django-prometheus==2.3.1",
    "django-business-metrics>=1.0.1,<2",
    {% endif -%}
    {% if cookiecutter.use_fingerprinting == "y" -%}
    "django-fingerprint-rt @ git+https://github.com/reef-technologies/django-fingerprint-rt.git@220b659",
    {% endif -%}
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    'pytest',
    'pytest-django',
    'pytest-xdist',
    'ipdb',
    'freezegun',
]
lint = [
    "ruff",
    {%- if cookiecutter.ci_use_spellchecker == "y" %}
    "codespell[toml]",
    {%- endif %}
]
type_check = [
    "django-stubs[compatible-mypy]",
    "djangorestframework-stubs[compatible-mypy]",
    "mypy",
    "types-freezegun",
    "types-python-dateutil",
    "types-requests",
]
security_check = [
    "bandit>=1.7.7",
]

[tool.ruff]
src = ["app/src"]
line-length = 100

[tool.ruff.lint]
# TODO add D
select = [
    "E", "F", "I", "UP",
    "TCH005",
]
# TODO: remove E501 once docstrings are formatted
ignore = [
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102","D103", "D104", # TODO remove once we have docstring for all public methods
    "E501", # TODO: remove E501 once docstrings are formatted
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test/**" = ["D", "F403", "F405"]

[tool.codespell]
skip = '*.min.js'
ignore-words-list = 'datas'